Minor wordsmithing; removed the line about how this wording was guaranteed to change.
git-svn-id: http://svn.osafoundation.org/chandler/trunk@280 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/application/welcome.html
+++ b/chandler/application/welcome.html
@@ -1,3 +1,7 @@
+<html>
+<head>
+</head>
+<body>
 <H1>Welcome to Chandler Release 0.1!</H1>
 
 We at OSAF are delighted that you downloaded the 0.1 release of
@@ -16,7 +20,7 @@ anywhere on the wiki, please add it!  If you'd like to discuss general
 topics, please join 
 <A HREF="http://www.osafoundation.org/mailing_lists.htm">our mailing lists</A>.
 <P>
-We can always use help -- please see our
+We can use help -- please see our
 <A HREF="http://www.osafoundation.org/volunteer.htm">volunteer page</A>.
 
 <P>
@@ -28,7 +32,7 @@ what we use in the future.  This means that
 <H3>
 To continue, press any key or <FONT COLOR="blue"><U>click here</U></A>.</H3>
 <P>
-<FONT SIZE=-2>This wording is guaranteed to change a bit in the next rev.  It's here 
-for Jed to have something to work with.</FONT>
 
+</body>
+</html>
 
