I moved some of the documentation pointers from the welcome screen into the README, so added the README to the welcome screen and removed some verbiage.
git-svn-id: http://svn.osafoundation.org/chandler/trunk@385 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/application/welcome.html
+++ b/chandler/application/welcome.html
@@ -10,19 +10,10 @@ of Chandler's architecture and APIs, and a glimse of what Chandler will
 do in the future.
 <P>
 Please note that Chandler is still in its <I>extremely</I> early stages, with only
-a very limited set of capabilities.  
-We will be adding more features and functionality
-as time goes by.  
-If you are interested in seeing what might lie ahead, please see
-<A HREF="http://wiki.osafoundation.org/bin/view/Main/ChandlerDiscussionTopics">Chandler 
-Discussion Topics</A> wiki.  If you have a specific feature request that isn't 
-anywhere on the wiki, please add it!  If you'd like to discuss general 
-topics, please join 
-<A HREF="http://www.osafoundation.org/mailing_lists.htm">our mailing lists</A>.
-<P>
-We can use help -- please see our
-<A HREF="http://www.osafoundation.org/volunteer.htm">volunteer page</A>.
-
+a very limited set of capabilities.  <B>Please</B> read the 
+<A HREF="http://wiki.osafoundation.org/bin/view/Main/ChandlerOhPointOneREADME">README</A> -- 
+it has information on known bugs, our future plans, volunteering,
+and where to go for futher documentation.
 <P>
 Please also understand that our underlying database is undergoing
 massive changes at the moment.  What we're using now <I>will not be</I> 
@@ -30,7 +21,7 @@ what we use in the future.  This means that
 <FONT COLOR="red">you should not store important information in Chandler</FONT> yet.
 <P>
 <H3>
-To continue, press any key or <FONT COLOR="blue"><U>click here</U></A>.</H3>
+To continue, <FONT COLOR="blue"><U>click here</U></A>.</H3>
 <P>
 
 </body>
