I fixed a bug that meant that the "click here" target was not blue.
git-svn-id: http://svn.osafoundation.org/chandler/trunk@390 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/application/welcome.html
+++ b/chandler/application/welcome.html
@@ -21,7 +21,7 @@ what we use in the future.  This means that
 <FONT COLOR="red">you should not store important information in Chandler</FONT> yet.
 <P>
 <H3>
-To continue, <FONT COLOR="blue"><U>click here</U></A>.</H3>
+To continue, <FONT COLOR="blue"><U>click here</U></FONT>.</H3>
 <P>
 
 </body>
