One final tweak before launch.
git-svn-id: http://svn.osafoundation.org/chandler/trunk@448 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/distrib/release.index.html
+++ b/chandler/distrib/release.index.html
@@ -32,15 +32,14 @@ to compile all the required libraries and the interpreter that Chandler
 depends on.  This type of distribution <b>does not</b> contain the part of
 the Chandler application that is written in Python.  You will need to <a
 href=http://wiki.osafoundation.org/bin/view/Main/GettingChandlerSource>get
-that source separately</a>.  What this distribution does
+that source separately</a>. <p> What this distribution does
 contain is a directory full of our pre-built versions of Python,
 wxPython, and many other third-party projects, all configured to
 run Chandler.  To use one of these distributions, follow the <a
 href=http://wiki.osafoundation.org/bin/view/Main/GettingChandlerSource>
 instructions for checking out the Chandler application code</a>,
-then download one of the distributions listed at the end of this
-paragraph. Next, copy the "debug" or "release" directory from the
-pre-built-libraries distribution to the "osaf/chandler" directory that
+then download one of the pre-built-libraries distributions listed at the end of this
+paragraph. Next, unpack the distribution and copy the contained "debug" or "release" directory to the "osaf/chandler" directory that 
 you checked out of CVS.  There is a shell script within the distribution
 that you can use to launch Chandler.
 
