put control-click in bold
git-svn-id: http://svn.osafoundation.org/chandler/trunk@449 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/distrib/release.index.html
+++ b/chandler/distrib/release.index.html
@@ -92,7 +92,7 @@ Run Chandler:
 <a name=enduserosx></a> &nbsp; <br>
 <h2>End-Users' Distribution: <i>Mac OSX</i></h2>
 
-Control-click this link: <a href=Chandler_osx_XYZZY.tar.gz>Chandler_osx_XYZZY.tar.gz</a>, select "Download" in the pop-up menu, and save this distribution file to your Desktop.  <b>Make sure StuffIt doesn't unpack the file because it can cause problems; we're investigating why.</b>
+<b>Control-click</b> this link: <a href=Chandler_osx_XYZZY.tar.gz>Chandler_osx_XYZZY.tar.gz</a>, select "Download" in the pop-up menu, and save this distribution file to your Desktop.  <b>Make sure StuffIt doesn't unpack the file because it can cause problems; we're investigating why.</b>
 
 Run the Terminal utility (it's in your Applications/Utilities folder), and cd to your Desktop (or the directory you downloaded the file to) by typing the following:
 
