Added disclaimer at the top of the release page
git-svn-id: http://svn.osafoundation.org/chandler/trunk@460 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/distrib/release.index.html
+++ b/chandler/distrib/release.index.html
@@ -14,6 +14,17 @@
 </td>
 <td width=550>
 <h1>Chandler Plugh:  XYZZY</h1>
+
+Thank you for your interest in the XYZZY plugh of Chandler.
+We hope that this plugh of Chandler will give you a flavor of Chandler's architecture and APIs, and a glimse of what Chandler will do in the future.
+<p>
+Please note that Chandler is still in its extremely early stages, with only a very limited set of capabilities.  Please read the <a href=http://wiki.osafoundation.org/bin/view/Main/ChandlerZeroPointOneREADME>README</a> -- it has information on known bugs, our future plans, volunteering, and where to go for futher documentation.
+
+<p>
+Please also understand that our underlying database is undergoing massive changes at the moment.  What we're using now will not be what we use in the future. This means that <font color=red>you should not store important information in Chandler</font> yet.
+
+<p>
+
 <h2>What Should I Download?</h2>
 There are a few different types of Chandler distribution files that are available in this plugh; choose the one that's right for you:
 <ul>
