--- a/chandler/distrib/release.index.html
+++ b/chandler/distrib/release.index.html
@@ -5,7 +5,7 @@
 <link rel="Stylesheet" href="http://www.osafoundation.org/css/OSAF.css" type="text/css" charset="iso-8859-1">
 </head>
 <body topmargin="0" leftmargin="0" marginwidth="0" marginheight="0">
-<p><a href="index.htm"><img src="http://www.osafoundation.org/images/OSAFLogo.gif" alt="Open Source Applications Foundation" width="574" height="105" border="0"></a></p>
+<p><a href="http://www.osafoundation.org/"><img src="http://www.osafoundation.org/images/OSAFLogo.gif" alt="Open Source Applications Foundation" width="574" height="105" border="0"></a></p>
 
 <table border=0 cellpadding=0 cellspacing=0>
 <tr>
