--- a/chandler/distrib/release.index.html
+++ b/chandler/distrib/release.index.html
@@ -156,7 +156,7 @@ explorer, double-click on Chandler.bat in the directory you extracted to.
 <a name=devbinlinux></a> &nbsp; <br>
 <h2>Python Developers' Distribution: <i>Linux</i></h2>
 
-First, get Chandler's Python source by checking out the <b>osaf/chandler/Chandler</b> module using CVS.  For CVS information, see our page about <a href=http://wiki.osafoundation.org/bin/view/Main/GettingChandlerSource>getting Chandler source</a>.
+First, get Chandler's Python source by checking out the <b>chandler-app</b> module using CVS.  For CVS information, see our page about <a href=http://wiki.osafoundation.org/bin/view/Main/GettingChandlerSource>getting Chandler source</a>.
 <p>
 
 Next, decide whether you want to run the debug version of the required components (Python, wxPython, etc.).  <p>
@@ -198,17 +198,22 @@ To run Chandler using the binaries you just downloaded, cd into the "release" di
 <a name=devbinosx></a> &nbsp; <br>
 <h2>Python Developers' Distribution: <i>Mac OSX</i></h2>
 
-First, get Chandler's Python source by checking out the <b>osaf/chandler/Chandler</b> module using CVS.  For CVS information, see our page about <a href=http://wiki.osafoundation.org/bin/view/Main/GettingChandlerSource>getting Chandler source</a>.
+First, get Chandler's Python source by checking out the <b>chandler-app</b> module using CVS.  For CVS information, see our page about <a href=http://wiki.osafoundation.org/bin/view/Main/GettingChandlerSource>getting Chandler source</a>.
 
 <p>
 
 Next, decide whether you want to run the debug version of the required components (Python, wxPython, etc.).  <p>
 
 If you want the debug version, 
-download <a href=Chandler_osx_dev_debug_XYZZY.tar.gz>Chandler_osx_dev_debug_XYZZY.tar.gz</a> and save it to the "osaf/chandler" directory that you checked out of CVS.  
-Change your shell's current directory to osaf/chandler and unpack the distribution via:
+<b>control-click</b> this link: <a href=Chandler_osx_dev_debug_XYZZY.tar.gz>Chandler_osx_dev_debug_XYZZY.tar.gz</a>, select "Download..." or "Save link target..." in the pop-up menu, and save this distribution file to the "osaf/chandler" directory that you checked out of CVS.  <b>Make sure StuffIt doesn't unpack the file because it can cause problems; we're investigating why.</b>
+<br>
+Open up a Terminal window and cd to your "osaf/chandler" directory.  Some browsers will save the file as Chandler_osx_dev_debug_XYZZY.tar.gz and some will save it as Chandler_osx_dev_debug_XYZZY.tar.  If your file ends in .tar.gz type the following:
 
 <pre>   tar zxf Chandler_osx_dev_debug_XYZZY.tar.gz</pre>
+
+If your file ends in .tar type:
+
+<pre>   tar xf Chandler_osx_dev_debug_XYZZY.tar</pre>
 
 This will create a "debug" subdirectory under osaf/chandler.  <p>
 To run Chandler using the binaries you just downloaded, cd into the "debug" directory and run the "RunDebug" shell script:
@@ -216,12 +221,16 @@ To run Chandler using the binaries you just downloaded, cd into the "debug" dire
 <pre>   cd debug 
    ./RunDebug</pre>
 
-If you elect to get the non-debug version, download <a href=Chandler_osx_dev_release_XYZZY.tar.gz>Chandler_osx_dev_release_XYZZY.tar.gz</a>
- and save it to the "osaf/chandler" directory that you checked out of CVS.<p>
-
-Change your shell's current directory to osaf/chandler and unpack the distribution via:
+If you elect to get the non-debug version, 
+<b>control-click</b> this link: <a href=Chandler_osx_dev_release_XYZZY.tar.gz>Chandler_osx_dev_release_XYZZY.tar.gz</a>, select "Download..." or "Save link target..." in the pop-up menu, and save this distribution file to the "osaf/chandler" directory that you checked out of CVS.  <b>Make sure StuffIt doesn't unpack the file because it can cause problems; we're investigating why.</b>
+<br>
+Open up a Terminal window and cd to your "osaf/chandler" directory.  Some browsers will save the file as Chandler_osx_dev_release_XYZZY.tar.gz and some will save it as Chandler_osx_dev_release_XYZZY.tar.  If your file ends in .tar.gz type the following:
 
 <pre>   tar zxf Chandler_osx_dev_release_XYZZY.tar.gz</pre>
+
+If your file ends in .tar type:
+
+<pre>   tar xf Chandler_osx_dev_release_XYZZY.tar</pre>
 
 This will create a "release" subdirectory under osaf/chandler.  <p>
 
@@ -240,7 +249,7 @@ To run Chandler using the binaries you just downloaded, cd into the "release" di
 <a name=devbinxp></a> &nbsp; <br>
 <h2>Python Developers' Distribution: <i>Windows XP</i></h2>
 
-First, get Chandler's Python source by checking out the <b>osaf/chandler/Chandler</b> module using CVS.  For CVS information, see our page about <a href=http://wiki.osafoundation.org/bin/view/Main/GettingChandlerSource>getting Chandler source</a>.
+First, get Chandler's Python source by checking out the <b>chandler-app</b> module using CVS.  For CVS information, see our page about <a href=http://wiki.osafoundation.org/bin/view/Main/GettingChandlerSource>getting Chandler source</a>.
 
 <p>
 
