Renamed "Python Developer's" distro to "Pre-Built-Libraries"
git-svn-id: http://svn.osafoundation.org/chandler/trunk@467 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/distrib/release.index.html
+++ b/chandler/distrib/release.index.html
@@ -154,7 +154,7 @@ explorer, double-click on Chandler.bat in the directory you extracted to.
 
 <hr>
 <a name=devbinlinux></a> &nbsp; <br>
-<h2>Python Developers' Distribution: <i>Linux</i></h2>
+<h2>Pre-Built-Libraries Distribution: <i>Linux</i></h2>
 
 First, get Chandler's Python source by checking out the <b>chandler-app</b> module using CVS.  For CVS information, see our page about <a href=http://wiki.osafoundation.org/bin/view/Main/GettingChandlerSource>getting Chandler source</a>.
 <p>
@@ -196,7 +196,7 @@ To run Chandler using the binaries you just downloaded, cd into the "release" di
 
 <hr>
 <a name=devbinosx></a> &nbsp; <br>
-<h2>Python Developers' Distribution: <i>Mac OSX</i></h2>
+<h2>Pre-Built-Libraries Distribution: <i>Mac OSX</i></h2>
 
 First, get Chandler's Python source by checking out the <b>chandler-app</b> module using CVS.  For CVS information, see our page about <a href=http://wiki.osafoundation.org/bin/view/Main/GettingChandlerSource>getting Chandler source</a>.
 
@@ -247,7 +247,7 @@ To run Chandler using the binaries you just downloaded, cd into the "release" di
 
 <hr>
 <a name=devbinxp></a> &nbsp; <br>
-<h2>Python Developers' Distribution: <i>Windows XP</i></h2>
+<h2>Pre-Built-Libraries Distribution: <i>Windows XP</i></h2>
 
 First, get Chandler's Python source by checking out the <b>chandler-app</b> module using CVS.  For CVS information, see our page about <a href=http://wiki.osafoundation.org/bin/view/Main/GettingChandlerSource>getting Chandler source</a>.
 
