Removed "XP" from "Windows XP"
git-svn-id: http://svn.osafoundation.org/chandler/trunk@471 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/distrib/release.index.html
+++ b/chandler/distrib/release.index.html
@@ -32,7 +32,7 @@ There are a few different types of Chandler distribution files that are availabl
 <b>Please select one of the following:</b>
 <a href=#enduserlinux>Linux</a> | 
 <a href=#enduserosx>Mac OSX</a> | 
-<a href=#enduserxp>Windows XP</a>
+<a href=#enduserwin>Windows</a>
 <br>
 &nbsp;
 <br>
@@ -57,7 +57,7 @@ that you can use to launch Chandler.
 <b>Please select one of the following:</b>
 <a href=#devbinlinux>Linux</a> | 
 <a href=#devbinosx>Mac OSX</a> | 
-<a href=#devbinxp>Windows XP</a>
+<a href=#devbinwin>Windows</a>
 <br>
 &nbsp;
 <br>
@@ -134,8 +134,8 @@ Run Chandler:
 <br>
 
 <hr>
-<a name=enduserxp></a> &nbsp; <br>
-<h2>End-Users' Distribution: <i>Windows XP</i></h2>
+<a name=enduserwin></a> &nbsp; <br>
+<h2>End-Users' Distribution: <i>Windows</i></h2>
 
 Download <a href=Chandler_win_XYZZY.zip>Chandler_win_XYZZY.zip</a>, open it by double-clicking it using Windows file explorer, and 
 extract all files to a directory on your computer.  Again, using the file
@@ -246,8 +246,8 @@ To run Chandler using the binaries you just downloaded, cd into the "release" di
 
 
 <hr>
-<a name=devbinxp></a> &nbsp; <br>
-<h2>Pre-Built-Libraries Distribution: <i>Windows XP</i></h2>
+<a name=devbinwin></a> &nbsp; <br>
+<h2>Pre-Built-Libraries Distribution: <i>Windows</i></h2>
 
 First, get Chandler's Python source by checking out the <b>chandler-app</b> module using CVS.  For CVS information, see our page about <a href=http://wiki.osafoundation.org/bin/view/Main/GettingChandlerSource>getting Chandler source</a>.
 
