Links to app.dmg file now on osx
git-svn-id: http://svn.osafoundation.org/chandler/trunk@494 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/distrib/release.index.html
+++ b/chandler/distrib/release.index.html
@@ -103,27 +103,7 @@ Run Chandler:
 <a name=enduserosx></a> &nbsp; <br>
 <h2>End-Users' Distribution: <i>Mac OSX</i></h2>
 
-<b>Control-click</b> this link: <a href=Chandler_osx_XYZZY.tar.gz>Chandler_osx_XYZZY.tar.gz</a>, select "Download..." or "Save link target..." in the pop-up menu, and save this distribution file to your Desktop.  <b>Make sure StuffIt doesn't unpack the file because it can cause problems; we're investigating why.</b>
-
-Run the Terminal utility (it's in your Applications/Utilities folder), and cd to your Desktop (or the directory you downloaded the file to) by typing the following:
-
-<pre>   cd ~/Desktop</pre>
-
-Some browsers will save the file as Chandler_osx_XYZZY.tar.gz and some will save it as Chandler_osx_XYZZY.tar.  If your file ends in .tar.gz type the following:
-
-<pre>   tar zxf Chandler_osx_XYZZY.tar.gz</pre>
-
-If your file ends in .tar type: 
-
-<pre>   tar xf Chandler_osx_XYZZY.tar</pre>
-
-This will create a Chandler_osx_XYZZY subdirectory.  Cd into that directory:
-
-<pre>   cd Chandler_osx_XYZZY</pre>
-
-Run Chandler:
-
-<pre>   ./Chandler.sh</pre>
+Download <a href=Chandler_XYZZY.app.dmg>Chandler_XYZZY.app.dmg</a> to your desktop, and when it's done it should open up a Finder window with the Chandler application in it.  Drag the Chandler icon to your desktop, then double-click the copy on your desktop to run Chandler.
 
 
 
