New instructions and new filename for OSX end-user distro
git-svn-id: http://svn.osafoundation.org/chandler/trunk@513 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/distrib/release.index.html
+++ b/chandler/distrib/release.index.html
@@ -103,7 +103,7 @@ Run Chandler:
 <a name=enduserosx></a> &nbsp; <br>
 <h2>End-Users' Distribution: <i>Mac OSX</i></h2>
 
-Download <a href=Chandler_XYZZY.app.dmg>Chandler_XYZZY.app.dmg</a> to your desktop, and when it's done it should open up a Finder window with the Chandler application in it.  Drag the Chandler icon to your desktop, then double-click the copy on your desktop to run Chandler.
+Download <a href=Chandler_XYZZY.dmg>Chandler_XYZZY.dmg</a> to your desktop, double-click it, and it will unpack the Chandler application.
 
 
 
