Changed Chandler.sh --> chandler for running linux
git-svn-id: http://svn.osafoundation.org/chandler/trunk@520 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/distrib/release.index.html
+++ b/chandler/distrib/release.index.html
@@ -89,7 +89,7 @@ This will create a Chandler_linux_XYZZY subdirectory.  Cd into that directory:
 
 Run Chandler:
 
-<pre>   ./Chandler.sh</pre>
+<pre>   ./chandler</pre>
 
 <br>
 <img src=http://www.osafoundation.org/images/spacer.gif width=1 height=1000> 
