--- a/chandler/parcels/osaf/MrMenus/AboutMrMenus.html
+++ b/chandler/parcels/osaf/MrMenus/AboutMrMenus.html
@@ -5,20 +5,14 @@
 <BODY>
 <H1>About MrMenus</H1>
 
-MrMenus is a parcel intended to demonstrate what parcels can do with menus.
-It is not meant to provide any end-user functionality, but rather to 
-demonstrate, to programmers, how parcels can interact with Chandler's
-menus.
-
+MrMenus is a sample parcel that shows programmers how your parcel's own 
+menus and menu items can be incorporated into Chandler's menu structure. 
+It consists of a very simple user interface that includes a parcel menu, 
+and custom menu items inserted in Chandler menus. MrMenus is only a 
+demonstration for programmers -- it doesn't provide any actual 
+functionality for users.
 <P>
-For more information on how to write your own parcel, see the
-<A HREF="http://wiki.osafoundation.org/bin/view/Main/HowToWriteAParcelTutorial">"How 
-to write a parcel" tutorial</A>.
+A tutorial for MrMenus is coming soon!
 <P>
-<!-- The SplashScreen will actually dismiss if you click on *any* text, not
-just the text below.  It's big, blue, and underlined to give people's 
-eyes a big target to click on.  -->
-<H2><FONT COLOR="BLUE"><U>Click here to continue</U></FONT></H2>
-
 </BODY>
 </HTML>
