--- a/chandler/parcels/osaf/roster/AboutRoster.html
+++ b/chandler/parcels/osaf/roster/AboutRoster.html
@@ -32,7 +32,7 @@ link turns green until you've read the message.  There are also menu commands th
 people from the Roster.
 
 </p><p>
-Like all of Chandler, the Roster parcel is still in an early stage of it's development.  Stay tuned for more exciting
+Like all of Chandler, the Roster parcel is still in an early stage of its development.  Stay tuned for more exciting
 features coming soon...
 <!-- The SplashScreen will actually dismiss if you click on *any* text, not
 
