--- a/chandler/parcels/osaf/contacts/AboutContacts.html
+++ b/chandler/parcels/osaf/contacts/AboutContacts.html
@@ -42,7 +42,7 @@ select <tt>Contacts-&gt;Delete Selected Contact</tt>.
 You can modify any visible contact method by clicking on the item.
 For example, to change a phone number, click on the phone number.
 <P>
-You can also, in theory, add ways of contacting the person by selecting
+You can also add ways of contacting the person by selecting
 <tt>Contacts-&gt;Add Contact Method to Current Contact</tt>.  For
 example, you might want to add a cell phone number to someone's
 contact info.  Once you've selected what type of contact method to
