Minor changes based on good feedback from Andy.
git-svn-id: http://svn.osafoundation.org/chandler/trunk@719 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/parcels/osaf/contacts/AboutContacts.html
+++ b/chandler/parcels/osaf/contacts/AboutContacts.html
@@ -11,10 +11,10 @@ it exists in the current release.  Note, however, that the Contacts parcel
 is under very active development and is likely to change rapidly and
 significantly.
 <P>
-Click <FONT COLOR="blue">here</FONT> or at the end to continue.
+Click <FONT COLOR="blue">here</FONT> or at the end to dismiss this window.
 <P>
-<H2> Table vs. minicards</H2>
-<P>
+
+<H2>Main panes</H2>
 The Contacts parcel has two main panes: the list of Contacts in the
 upper pane and the Contact Detail in the lower pane.
 <P>
@@ -32,7 +32,8 @@ Contacts</tt> to generate twenty-five random Contacts.
 <P>
 To add a single Contact, select <tt>Contacts-&gt;Add New Contact</tt>.
 You will be prompted for a Contacts template to use.  Each Contact
-template has its own set of suggested fields for you to fill in.
+template has its own set of suggested fields for you to fill in at first.
+(You can add more fields later by adding a Contact Method, discussed below.)
 <P>
 To remove a contact, 
 select <tt>Contacts-&gt;Delete Selected Contact</tt>.
@@ -48,13 +49,13 @@ example, you might want to add a cell phone number to someone's
 contact info.  Once you've selected what type of contact method to
 add, click on that contact method in the Detail View.  
 <P>
-<H2> Groups</H2>
+<H2>Views</H2>
 <P>
 In the sidebar, there is a boxed "+" (Linux and Windows) or right-pointing triangle (Mac)
 next to Contacts.  Clicking on that
 shows different Views.
+You can also select a different View from the Contacts menu.
 <P>
-<H2>Views</H2>
 The Contacts parcel ships with three Views in it: All, Coworkers, and Companies.  
 Not surprisingly, these will show you 
 <UL>
@@ -62,10 +63,6 @@ Not surprisingly, these will show you
 <LI>all the Contacts in the Coworkers Group, and 
 <LI>all the Contacts in the Companies Group.  
 </UL>
-You can select a 
-different View either from the Contacts menu or by clicking on the
-disclosure triangle (Mac OS) or boxed "+" (Windows) next to <tt>Contacts</tt> 
-in the sidebar.
 <P>
 You can also define your own Views.  Select the menu item 
 <tt>Contacts->Add a New View</tt> and fill in the appropriate 
@@ -79,6 +76,27 @@ To change a Contact's group membership, click on the groups that they
 are belong to (or <tt>None</tt>).  The groups are next to the 
 label <B>Member of</B> in the Detail View.
 <P>
+
+<H2>Contact Templates</H2>
+As mentioned above under <B>Adding and Removing Contacts</B>, there are
+different templates for creating contacts.  You can modify these templates
+so that different fields appear while you are creating a contact.  Simply
+select the fields that you wish to add by putting a mark in the box next
+to the field.  To remove a field, remove the mark.
+<P>
+For example, if lots of your friends have cellphones, you might want to add
+<TT>Cellphone</TT> to your <TT>Friends</TT> Contact template.
+To do so, first select the menu item <TT>Contacts->Edit Contact 
+Templates...</TT>.  Next, put a mark in the box next to <TT>Cellphone</TT> 
+in the <TT>Contact Methods</TT> column.
+<P>
+You can also create new contact templates.  Select <TT>Contacts->Edit 
+Contact</TT>, then click on the <TT>Create New Template</TT> button.  Once
+you type in the name of your new template and click OK, you can modify it
+in exactly the same way as you would modify an existing template. 
+
+
+
 <A NAME="sharing"></A>
 <H2> Sharing</H2>
 <P>
@@ -108,7 +126,7 @@ that contact record into your own Contacts list.
 <!-- The SplashScreen will actually dismiss if you click on *any* text, not
 just the text below.  It's big, blue, and underlined to give people's 
 eyes a big target to click on.  -->
-<H2><FONT COLOR="BLUE"><U>Click here to continue</U></FONT></H2>
+<H2><FONT COLOR="BLUE"><U>Click here to dismiss this window.</U></FONT></H2>
 
 </BODY>
 </HTML>
