Fixed welcome.html to reflect that the README page moved.
git-svn-id: http://svn.osafoundation.org/chandler/trunk@728 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/application/welcome.html
+++ b/chandler/application/welcome.html
@@ -11,7 +11,8 @@ do in the future.
 <P>
 Please note that Chandler is still in its <I>extremely</I> early stages, with only
 a very limited set of capabilities.  <B>Please</B> read the 
-<A HREF="http://wiki.osafoundation.org/bin/view/Main/ChandlerOhPointOneREADME">README</A> -- 
+<A HREF="http://wiki.osafoundation.org/bin/view/Main/ChandlerZeroPointOneREADME">
+README</A> -- 
 it has information on known bugs, our future plans, volunteering,
 and where to go for futher documentation.
 <P>
